<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <!--<item-->
            <!--android:id="@+id/nav_home"-->
            <!--android:icon="@drawable/ic_menu_gallery"-->
            <!--android:title="Album" />-->
        <!--<item-->
            <!--android:id="@+id/nav_keytext"-->
            <!--android:icon="@drawable/ic_keyboard"-->
            <!--android:title="Text" />-->



        <!--<item-->
            <!--android:id="@+id/nav_paint"-->
            <!--android:icon="@drawable/ic_brush"-->
            <!--android:title="Paint" />-->

        <!--<item-->
            <!--android:id="@+id/nav_import"-->
            <!--android:icon="@drawable/ic_menu_gallery"-->
            <!--android:title="Import Photo" />-->
        <item
            android:id="@+id/nav_clock"
            android:icon="@drawable/ic_access_time"
            android:title="@string/Administrations" />

        <item
            android:id="@+id/nav_admin_create_tsk"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/create_new_task" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/Settings" />
    </group>

   <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
